# algo_test

./: AsyncIO.ipynb  KAFKA.ipynb  SOLID.ipynb  Yield_examples.ipynb  async_concurrency_exercises.md  async_questions.json  async_trainer.py  design_patterns.ipynb  full_preparation.ipynb  pyproject.toml  tasks.json  two_pointers.ipynb
.ipynb_checkpoints/: Algo-checkpoint.ipynb  AsyncIO-checkpoint.ipynb  KAFKA-checkpoint.ipynb  design_patterns-checkpoint.ipynb  full_preparation-checkpoint.ipynb  overview-checkpoint.md  pyproject-checkpoint.toml  rate_limiting_async-checkpoint.ipynb  task_selector-checkpoint.py  two_pointers-checkpoint.ipynb
parsers/: arbitr.py
test_projects/kafka/: consumer.py  producer.py
topics/: AMQP.ipynb  Algo.ipynb  AsyncIO.ipynb  SOLID.ipynb  Sorting.ipynb  Yield_examples.ipynb  full_preparation.ipynb
topics/arrays/: check_dubs.py  find_ixs.py  palindrome.py
topics/async_python/rate_limiting/: Untitled  rate_limiting_async.ipynb  solution.py
topics/async_python/rate_limiting/article/: 1. while+await.py  2. gather.py  3. semaphore + gather.py  4. worker pool.py  (+5 more)
topics/two_pointers/: +merge_sorted.py  +move_zeros.py  +remove_dubs.py  +sub_array.py  +three_sum.py  squares.py  two_pointers.md
topics/yandex_algos/: playground.ipynb  Какие алгоритмы нужно знать.ipynb
topics/yandex_algos/.ipynb_checkpoints/: 1-1_2-checkpoint.ipynb  playground-checkpoint.ipynb
yandex_algos/: 1-1_2.ipynb  t1-1.ipynb  tasks_solving.ipynb
yandex_algos/.ipynb_checkpoints/: tasks_solving-checkpoint.ipynb  Какие алгоритмы нужно знать-checkpoint.ipynb
