[tool.poetry]
name = "algo-test"
version = "0.1.0"
description = ""
authors = ["Eliere <maslievilya1@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_test"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
